# claria

./: .gitignore  AGENTS.md  AWS_SDK_NOTES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cla.yml  release.yml
.plan/: memo-diarization-formatting.md
claria-desktop-frontend/: index.html  package-lock.json  package.json
claria-desktop-frontend/src/: App.tsx  main.tsx
claria-desktop-frontend/src/components/: ApplyProgress.tsx  CauseBadge.tsx  ChatWidget.tsx  EscalationCard.tsx  FieldDriftList.tsx  PlanEntryCard.tsx  PlanView.tsx  ScanProgress.tsx  StepIndicator.tsx
claria-desktop-frontend/src/lib/: bindings.ts  diff.ts  tauri.ts
claria-desktop-frontend/src/pages/: About.tsx  AccessKeyGuide.tsx  AwsAccountGuide.tsx  AwsManage.tsx  ClientChat.tsx  ClientList.tsx  ClientRecord.tsx  Console.tsx  CostExplorer.tsx  CredentialIntake.tsx  InfraChat.tsx  ManageDashboard.tsx  MfaSetupGuide.tsx  Preferences.tsx  ScanProvision.tsx  StartScreen.tsx
crates/claria-audit/: Cargo.toml
crates/claria-audit/src/: client.rs  error.rs  events.rs  lib.rs
crates/claria-auth/: Cargo.toml
crates/claria-auth/src/: client.rs  error.rs  flows.rs  jwt.rs  lib.rs
crates/claria-bedrock/: Cargo.toml
crates/claria-bedrock/src/: chat.rs  client.rs  context.rs  error.rs  extract.rs  lib.rs  tokens.rs  transaction.rs
crates/claria-bedrock/tests/: chat_models.rs  context.rs
crates/claria-billing/: Cargo.toml
crates/claria-billing/src/: client.rs  error.rs  lib.rs  query.rs  types.rs
crates/claria-billing/tests/: parse.rs  validate.rs
crates/claria-core/: Cargo.toml
crates/claria-core/src/: error.rs  lib.rs  s3_keys.rs  schema.rs
crates/claria-core/src/models/: anonymize.rs  answer.rs  assessment.rs  chat_history.rs  client.rs  cost.rs  goal.rs  mod.rs  report.rs  snippet.rs  template.rs  token_count.rs  transaction.rs
crates/claria-desktop/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
crates/claria-desktop/capabilities/: default.json
crates/claria-desktop/examples/: bootstrap_smoke.rs
crates/claria-desktop/icons/: icon.icns
crates/claria-desktop/src/: aws.rs  commands.rs  config.rs  console.rs  lib.rs  main.rs  state.rs
crates/claria-export/: Cargo.toml
crates/claria-export/src/: docx.rs  error.rs  lib.rs  pdf.rs  render.rs  styles.rs
crates/claria-instruments/: Cargo.toml
crates/claria-instruments/src/: error.rs  lib.rs  scoring.rs
crates/claria-instruments/src/instruments/: ablls_r.rs  ados2.rs  basc3.rs  cars2.rs  mod.rs  srs2.rs  vb_mapp.rs  vineland3.rs  wais_iv.rs
crates/claria-lambda/: Cargo.toml
crates/claria-lambda/src/: error.rs  main.rs  state.rs
crates/claria-lambda/src/middleware/: audit.rs  auth.rs
crates/claria-lambda/src/routes/: anonymize.rs  assessments.rs  cost.rs  goals.rs  health.rs  instruments.rs  mod.rs  reports.rs  snippets.rs  templates.rs  transactions.rs
crates/claria-provisioner/: Cargo.toml
crates/claria-provisioner/src/: account_setup.rs  addr.rs  check_baa.rs  drift.rs  error.rs  lib.rs  manifest.rs  orchestrate.rs  persistence.rs  plan.rs  resource.rs  scan.rs  state.rs  sync.rs  syncer.rs
crates/claria-provisioner/src/resources/: api_gateway.rs  bedrock_access.rs  cloudtrail.rs  cognito.rs  iam.rs  iam_user.rs  lambda.rs  mod.rs  s3_bucket.rs
crates/claria-provisioner/src/syncers/: baa_agreement.rs  bedrock_model_agreement.rs  cloudtrail_trail.rs  cloudtrail_trail_logging.rs  cost_explorer_access.rs  iam_user.rs  iam_user_policy.rs  mod.rs  s3_bucket.rs  s3_bucket_encryption.rs  s3_bucket_policy.rs  s3_bucket_public_access_block.rs  s3_bucket_versioning.rs  transcribe_access.rs
crates/claria-provisioner/tests/: plan_test.rs
crates/claria-search/: Cargo.toml
crates/claria-search/src/: error.rs  flush.rs  index.rs  lib.rs  mutate.rs  query.rs
crates/claria-storage/: Cargo.toml
crates/claria-storage/src/: client.rs  error.rs  lib.rs  objects.rs  state.rs
crates/claria-transcribe/: Cargo.toml
crates/claria-transcribe/src/: error.rs  lib.rs
crates/claria-whisper/: Cargo.toml
crates/claria-whisper/src/: error.rs  lib.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: tauri.ts
frontend/src/pages/: IamSetupGuide.tsx  ScanProvision.tsx  StartScreen.tsx
screenshots/: README.md  capture.spec.ts  fixtures.ts  package-lock.json  package.json  playwright.config.ts  tauri-mock.ts
signatures/: cla.json
