[workspace]
resolver = "2"
members = [
    "crates/claria-core",
    "crates/claria-storage",
    "crates/claria-bedrock",
    "crates/claria-audit",
    "crates/claria-search",
    "crates/claria-instruments",
    "crates/claria-export",
    "crates/claria-provisioner",
    "crates/claria-desktop",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
publish = false
push = true
pre-release-replacements = [
  { file = "crates/claria-desktop/tauri.conf.json", search = "\"version\": \"[^\"]+\"", replace = "\"version\": \"{{version}}\"" },
]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
