[package]
name = "claria-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = "=1.8.14"
aws-sdk-cognitoidentityprovider = "=1.110.0"
claria-core = { path = "../claria-core" }
jsonwebtoken = "=10.3.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
