[package]
name = "claria-billing"
version = "0.15.0"
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = "=1.8.14"
aws-sdk-costexplorer = "=1.111.0"
aws-smithy-runtime-api = "=1.11.5"
aws-smithy-types = "=1.4.5"
jiff = "=0.2.21"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
thiserror = "=2.0.18"
tracing = "=0.1.44"
