[package]
name = "claria-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true

[dependencies]
jiff = { version = "=0.2.21", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tantivy = "=0.25.0"
thiserror = "=2.0.18"
ts-rs = { version = "=12.0.1", features = ["uuid-impl", "jiff-impl", "serde-json-impl"] }
uuid = { version = "=1.21.0", features = ["v4", "serde"] }
