[package]
name = "claria-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
claria-provisioner = { path = "../claria-provisioner" }
aws-config = "=1.8.14"
aws-sdk-s3 = "=1.124.0"
aws-sdk-iam = "=1.105.0"
aws-sdk-lambda = "=1.117.0"
aws-sdk-apigatewayv2 = "=1.98.0"
aws-sdk-bedrock = "=1.133.0"
aws-sdk-cloudtrail = "=1.104.0"
aws-sdk-cognitoidentityprovider = "=1.110.0"
color-eyre = "=0.6.3"
eyre = "=0.6.12"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.10.2", features = [] }
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "json"] }

[build-dependencies]
tauri-build = "=2.5.5"
