[package]
name = "claria-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
claria-provisioner = { path = "../claria-provisioner" }
aws-config = "=1.8.14"
aws-sdk-sts = "=1.99.0"
color-eyre = "=0.6.3"
dirs = "=6.0.0"
eyre = "=0.6.12"
jiff = { version = "=0.2.21", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.10.2", features = [] }
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "json"] }

[build-dependencies]
tauri-build = "=2.5.5"
