[package]
name = "claria-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
claria-bedrock = { path = "../claria-bedrock" }
claria-core = { path = "../claria-core" }
claria-provisioner = { path = "../claria-provisioner" }
claria-storage = { path = "../claria-storage" }
aws-config = "=1.8.14"
aws-sdk-s3 = "=1.124.0"
aws-sdk-sts = "=1.99.0"
color-eyre = "=0.6.3"
dirs = "=6.0.0"
eyre = "=0.6.12"
jiff = { version = "=0.2.21", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "=0.0.9"
tauri = { version = "=2.10.2", features = [] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "json"] }
uuid = { version = "=1.21.0", features = ["v4"] }

[package.metadata.release]
pre-release-replacements = [
  { file = "tauri.conf.json", search = "\"version\": \"[^\"]+\"", replace = "\"version\": \"{{version}}\"" },
]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }
