[package]
name = "claria-export"
version = "0.6.0"
edition.workspace = true
license.workspace = true

[dependencies]
claria-core = { path = "../claria-core" }
docx-rs = "=0.4.19"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tera = "=1.20.1"
thiserror = "=2.0.18"
tracing = "=0.1.44"
