[package]
name = "claria-instruments"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
claria-core = { path = "../claria-core" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
ts-rs = { version = "=12.0.1", features = ["serde-json-impl"] }
