[package]
name = "claria-storage"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = "=1.8.14"
aws-sdk-s3 = "=1.124.0"
aws-smithy-types = "=1.4.5"
claria-core = { path = "../claria-core" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
