[package]
name = "claria-transcribe"
version = "0.6.0"
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = "=1.8.14"
aws-sdk-s3 = "=1.124.0"
aws-sdk-transcribe = "=1.101.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
uuid = { version = "=1.21.0", features = ["v4"] }
