[package]
name = "claria-whisper"
version = "0.11.0"
edition.workspace = true
license.workspace = true

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
byteorder = "=1.5.0"
candle-core = "=0.9.2"
candle-nn = "=0.9.2"
candle-transformers = "=0.9.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokenizers = "=0.22.2"
tracing = "=0.1.44"
